--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,24 @@
-<mat-card>
-  <mat-card-title>Login</mat-card-title>
-  <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <p>
-        <mat-form-field>
-          <input type="text" matInput placeholder="Username" formControlName="username">
-        </mat-form-field>
-      </p>
-
-      <p>
-        <mat-form-field>
-          <input type="password" matInput placeholder="Password" formControlName="password">
-        </mat-form-field>
-      </p>
-
-      <!-- <p *ngIf="error" class="error">
-        {{ error }}
-      </p> -->
-
-      <div class="button">
-        <button type="submit" mat-button>Login</button>
+<div class="login-page">
+  <div class="content px20">
+    <form class="login-form" #myForm="ngForm" (ngSubmit)="onLogin()">
+      <div class="text-center">
+        <h2 class="app-name">Material Admin</h2>
       </div>
-
+      <div fxLayout="row">
+        <div fxFlexFill>
+          <mat-form-field class="w-100">
+            <input matInput placeholder="Email">
+          </mat-form-field>
+          <mat-form-field class="w-100">
+            <input matInput type="password" placeholder="Password">
+          </mat-form-field>
+        </div>
+      </div>
+      <div fxLayout="row">
+        <div fxFlexFill>
+          <button type="submit" mat-raised-button color="primary" class="w-100" >Login</button>
+        </div>
+      </div>
     </form>
-  </mat-card-content>
-</mat-card>
+  </div>
+</div>
