--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,13 @@
-<div class="login-page">
-  <div class="content px20">
-    <form class="login-form" #myForm="ngForm" (ngSubmit)="onLogin()">
-      <div class="text-center">
-        <h2 class="app-name">Material Admin</h2>
-      </div>
-      <div fxLayout="row">
-        <div fxFlexFill>
-          <mat-form-field class="w-100">
-            <input matInput placeholder="Email">
-          </mat-form-field>
-          <mat-form-field class="w-100">
-            <input matInput type="password" placeholder="Password">
-          </mat-form-field>
-        </div>
-      </div>
-      <div fxLayout="row">
-        <div fxFlexFill>
-          <button type="submit" mat-raised-button color="primary" class="w-100" >Login</button>
-        </div>
-      </div>
-    </form>
+<form class="form" [formGroup]="form" (ngSubmit)="login()">
+  <mat-form-field class="form__input">
+    <input matInput placeholder="User name" type="text" formControlName="username">
+  </mat-form-field>
+
+  <mat-form-field class="form__input">
+    <input matInput placeholder="Password" type="password" formControlName="password">
+  </mat-form-field>
+
+  <div class="form-actions">
+    <button class="form-actions__login" mat-raised-button color="primary" type="submit">Login</button>
   </div>
-</div>
+</form>
