add layout of dashboard component and route

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,8 @@
-<p>layout works!</p>
+<header>
+  header
+</header>
+<main>
+  dash
+  <router-outlet></router-outlet>
+</main>
+<footer>footer</footer>
