add top nav bar component

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,8 +1,9 @@
-<header>
-  header
-</header>
-<main>
-  dash
-  <router-outlet></router-outlet>
-</main>
-<footer>footer</footer>
+<div class="layout-container">
+  <header>
+    <app-top-nav></app-top-nav>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  <footer>footer</footer>
+</div>
