--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -1,37 +1,18 @@
 @import 'src/scss/variables';
-.mat-nav-list {
+.mat-mdc-nav-list {
   width: 100%;
   a {
       .mat-icon {
           margin-right: 15px;
           color: $primary-color;
-      }
-      display: block;
-  }
+        }
+       .nav-content {
+        display: flex;
+        align-items: center;
+        }
+    }
 }
-.nested-menu {
-  .nested {
-      list-style-type: none;
-  }
-  .submenu {
-      display: none;
-      height: 0;
-  }
-  & .expand {
-      &.submenu {
-          display: block;
-          list-style-type: none;
-          height: auto;
-          margin: 0;
-          li {
-              a {
-                  padding: 10px;
-                  display: block;
-              }
-          }
-      }
-  }
-}
+ 
 
 
 
