add dialog component

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
 <div>
+  <div class="btn-area">
+    <button mat-raised-button (click)="openDialog('add')">{{dialogTitle.add}}</button>
+  </div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
