add coreui and change login page style

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,72 @@
-<form class="form" [formGroup]="form" (ngSubmit)="login()">
-  <mat-form-field class="form__input">
-    <input matInput placeholder="User name" type="text" formControlName="username">
-  </mat-form-field>
+<div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
+  <c-container breakpoint="md">
+    <c-row class="justify-content-center">
+      <c-col lg="6" xl="4">
+          <c-card class="p-4">
+            <c-card-body class="text-center">
+              <h1>Login</h1>
+              <hr>
+              <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" cForm  >
+                <c-row class="mb-1">
+                  <label [sm]="4" cCol cLabel="col" for="username">Username</label>
+                  <c-col *ngIf="loginForm.controls['username'] as ctrl" [sm]="8">
+                    <input
+                      [valid]="
+                        ctrl.touched && ctrl.valid
+                          ? true
+                          : (submitted || ctrl.touched) && ctrl.invalid
+                          ? false
+                          : undefined
+                      "
+                      autocomplete="off"
+                      cFormControl
+                      formControlName="username"
+                      id="username"
+                      placeholder="Username"
+                      required
+                    />
+                  </c-col>
+                </c-row>
+          
+                  <c-row class="mb-1">
+                    <label [sm]="4" cCol cLabel="col" for="password">Password</label>
+                    <c-col *ngIf="loginForm.controls['password'] as ctrl" [sm]="8">
+                      <input
+                        [valid]="
+                          ctrl.touched && ctrl.valid
+                            ? true
+                            : (submitted || ctrl.touched) && ctrl.invalid
+                            ? false
+                            : undefined"
+                        autocomplete="new-password"
+                        cFormControl
+                        formControlName="password"
+                        id="password"
+                        placeholder="Password"
+                        required
+                        type="password"
+                      />
+                    </c-col>
+                </c-row>
+                <hr />
+                <c-button-group>
+                  <button
+                  [disabled]= "loginForm.invalid"
+                  cButton
+                  color="primary"
+                  type="submit"
+                  class="px-4"
+                  >
+                    Submit
+                  </button>
+                </c-button-group>
+              </form>
+            </c-card-body>
+          </c-card>
+      </c-col>
+    </c-row>
+  </c-container>
+</div>
 
-  <mat-form-field class="form__input">
-    <input matInput placeholder="Password" type="password" formControlName="password">
-  </mat-form-field>
 
-  <div class="form-actions">
-    <button class="form-actions__login" mat-raised-button color="primary" type="submit">Login</button>
-  </div>
-</form>
+ 
