--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,5 @@
-$primary-color: #3f51b5;
-$white: #ffffff;
-$main-background-color: #fafafa;
+// Variable overrides
+//
+// If you want to customize your project please add your variables below.
 
-
-
-
+$enable-deprecation-messages: false !default;
