--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -16,27 +16,10 @@
   
 <!--main-->
 <div class="wrapper d-flex flex-column min-vh-100">
-
-  <ng-container>
-    <c-container [fluid]="true" class="border-bottom px-4">
-      <svg cIcon name="cilMenu" size="lg"></svg>
-      <svg cIcon class="me-2" name="cilBell"></svg>
-      <button
-        cSidebarToggle="sidebar1"
-        cHeaderToggler
-        class="btn"
-        toggle="visible"
-        style="margin-inline-start: -14px;"
-        aria-label="Toggle sidebar navigation"
-      >
-        <svg cIcon name="cilMenu" size="lg"></svg>
-      </button>  
-    </c-container>
-    <c-container [fluid]="true" class="px-4">
-      <c-breadcrumb-router />
-    </c-container>
-  </ng-container>
-
+  <app-default-header
+  class="mb-4 d-print-none header header-sticky p-0 shadow-sm"
+  position="sticky"
+  sidebarId="sidebar1"></app-default-header>
   <div class="body flex-grow-1">
     <c-container breakpoint="lg" class="h-auto px-4">
       <router-outlet />
