--- a/src/app/components/default-header/default-header.component.html
+++ b/src/app/components/default-header/default-header.component.html
@@ -11,11 +11,11 @@
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>  
     <c-header-nav class="ms-auto ms-md-0">
-      <c-nav-item>
-        admin
+      <c-nav-item style="margin-right: 6px;">
+        {{username }}  
       </c-nav-item>
-      <c-nav-item  (click)="logout()" >
-           <svg cIcon class="me-2" name="cilAccountLogout" ></svg>
+      <c-nav-item  (click)="logout()" style="cursor: pointer;">
+        <svg cIcon class="me-2" name="cilAccountLogout" ></svg>
       </c-nav-item>
     </c-header-nav>
 
