add display student data in table

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,3 +1,2 @@
-<div>
- dashboard
-</div>
+<ngx-datatable [rows]="studentList" [columns]="columns" [loadingIndicator]="loadingIndicator">
+</ngx-datatable>
