--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,3 +21,9 @@
 // Examples
 // We use those styles to show code examples, you should remove them in your application.
 @import "examples";
+
+@import "node_modules/@swimlane/ngx-datatable/index.css";
+@import "node_modules/@swimlane/ngx-datatable/themes/dark.css";
+@import "node_modules/@swimlane/ngx-datatable/themes/bootstrap.css";
+@import "node_modules/@swimlane/ngx-datatable/themes/material.css";
+@import "node_modules/@swimlane/ngx-datatable/assets/icons.css";
