--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -2,11 +2,29 @@
 class="bootstrap striped"
 [limit]="10"
 [rows]="studentList"
-[columns]="columns"
 [loadingIndicator]="loadingIndicator"
 [columnMode]="'force'"
 [headerHeight]="50"
 [footerHeight]="50"
 [rowHeight]="'auto'"
 >
+<ngx-datatable-column name="name" prop="name"></ngx-datatable-column>
+<ngx-datatable-column name="Gender" prop="gender"></ngx-datatable-column>
+<ngx-datatable-column name="Age" prop="age"></ngx-datatable-column>
+<ngx-datatable-column name="City" prop="city"></ngx-datatable-column>
+<ngx-datatable-column name="Province" prop="province"></ngx-datatable-column>
+<ngx-datatable-column name="Hope Salary" prop="hope_salary"></ngx-datatable-column>
+<ngx-datatable-column name="Salary" prop="salary"></ngx-datatable-column>
+<ngx-datatable-column name="Group" prop="group"></ngx-datatable-column>
+<ngx-datatable-column name="Actions"  prop="id">
+  <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+    <span  (click)="editDialog(row)" >
+      <svg cIcon class="me-2" name="cil-pencil" ></svg>
+    </span>
+    <span class="mx-1"></span>
+    <span  (click)="deteleDialog(row)" >
+      <svg cIcon class="me-2" name="cilTrash" ></svg>
+    </span>
+  </ng-template>
+</ngx-datatable-column>
 </ngx-datatable>
