add dialog component

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@include mat.core();
 
 // If you want to override variables do it here
 @import "variables";
@@ -27,3 +29,4 @@
 @import "node_modules/@swimlane/ngx-datatable/themes/bootstrap.css";
 @import "node_modules/@swimlane/ngx-datatable/themes/material.css";
 @import "node_modules/@swimlane/ngx-datatable/assets/icons.css";
+ 
