add gender pipe

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -9,7 +9,11 @@ class="bootstrap striped"
 [rowHeight]="'auto'"
 >
 <ngx-datatable-column name="name" prop="name"></ngx-datatable-column>
-<ngx-datatable-column name="Gender" prop="gender"></ngx-datatable-column>
+<ngx-datatable-column name="Gender">
+  <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+    <span  >{{ value | transformGender }}</span>
+  </ng-template>
+  </ngx-datatable-column>
 <ngx-datatable-column name="Age" prop="age"></ngx-datatable-column>
 <ngx-datatable-column name="City" prop="city"></ngx-datatable-column>
 <ngx-datatable-column name="Province" prop="province"></ngx-datatable-column>
@@ -28,3 +32,4 @@ class="bootstrap striped"
   </ng-template>
 </ngx-datatable-column>
 </ngx-datatable>
+ 
