alter repeat call get student list api ,add table progress bar and remove log

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <ngx-datatable 
-class="bootstrap striped"
+class=" striped material"
 [limit]="10"
 [rows]="studentList"
 [columnMode]="'force'"
 [headerHeight]="50"
 [footerHeight]="50"
 [rowHeight]="'auto'"
+[loadingIndicator]="loadingIndicator"
 >
 <ngx-datatable-column name="name" prop="name"></ngx-datatable-column>
 <ngx-datatable-column name="Gender">
