--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,3 +30,4 @@
 @import "node_modules/@swimlane/ngx-datatable/themes/material.css";
 @import "node_modules/@swimlane/ngx-datatable/assets/icons.css";
  
+@import 'ngx-toastr/toastr';
