--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
+<button mat-raised-button color="primary" (click)="createDialog('create')" style="margin-bottom: 8px;">Create</button>
+
 <ngx-datatable 
 class=" striped material"
 [limit]="10"
@@ -32,4 +34,6 @@ class=" striped material"
   </ng-template>
 </ngx-datatable-column>
 </ngx-datatable>
+
+
  
