add create student api

--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -13,10 +13,16 @@
       </mat-select>
     </mat-form-field>
    <mat-form-field>
+      <input matInput placeholder="age" formControlName="age" type="number">
+    </mat-form-field>
+   <mat-form-field>
       <input matInput placeholder="area" formControlName="area">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="city" formControlName="city">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="province" formControlName="province">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="hopeSalary" formControlName="hope_salary" type="number">
