--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,5 +1,11 @@
-<button mat-raised-button color="primary" (click)="createDialog('create')" style="margin-bottom: 8px;">Create</button>
-
+<button 
+ mat-raised-button
+ color="primary"
+ (click)="createDialog('create')" 
+ style="margin-bottom: 8px;"
+ >
+Create
+</button>
 <ngx-datatable 
 class=" striped material"
 [limit]="10"
