--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,71 +2,47 @@
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
       <c-col lg="8" xl="6">
-          <c-card class="p-4">
-            <c-card-body class="text-center">
-              <h1>Login</h1>
-              <hr>
-              <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" cForm  >
-                <c-row class="mb-1">
-                  <label [sm]="4" cCol cLabel="col" for="username">Username</label>
-                  <c-col *ngIf="loginForm.controls['username'] as ctrl" [sm]="8">
-                    <input
-                      [valid]="
+        <c-card class="p-4">
+          <c-card-body class="text-center">
+            <h1>Login</h1>
+            <hr>
+            <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" cForm>
+              <c-row class="mb-1">
+                <label [sm]="4" cCol cLabel="col" for="username">Username</label>
+                <c-col *ngIf="loginForm.controls['username'] as ctrl" [sm]="8">
+                  <input [valid]="
                         ctrl.touched && ctrl.valid
                           ? true
                           : (submitted || ctrl.touched) && ctrl.invalid
                           ? false
                           : undefined
-                      "
-                      autocomplete="off"
-                      cFormControl
-                      formControlName="username"
-                      id="username"
-                      placeholder="Username"
-                      required
-                    />
-                  </c-col>
-                </c-row>
-          
-                  <c-row class="mb-1">
-                    <label [sm]="4" cCol cLabel="col" for="password">Password</label>
-                    <c-col *ngIf="loginForm.controls['password'] as ctrl" [sm]="8">
-                      <input
-                        [valid]="
+                      " autocomplete="off" cFormControl formControlName="username" id="username" placeholder="Username"
+                    required />
+                </c-col>
+              </c-row>
+
+              <c-row class="mb-1">
+                <label [sm]="4" cCol cLabel="col" for="password">Password</label>
+                <c-col *ngIf="loginForm.controls['password'] as ctrl" [sm]="8">
+                  <input [valid]="
                           ctrl.touched && ctrl.valid
                             ? true
                             : (submitted || ctrl.touched) && ctrl.invalid
                             ? false
-                            : undefined"
-                        autocomplete="new-password"
-                        cFormControl
-                        formControlName="password"
-                        id="password"
-                        placeholder="Password"
-                        required
-                        type="password"
-                      />
-                    </c-col>
-                </c-row>
-                <hr />
-                <c-button-group>
-                  <button
-                  [disabled]= "loginForm.invalid"
-                  cButton
-                  color="primary"
-                  type="submit"
-                  class="px-4"
-                  >
-                    Submit
-                  </button>
-                </c-button-group>
-              </form>
-            </c-card-body>
-          </c-card>
+                            : undefined" autocomplete="new-password" cFormControl formControlName="password"
+                    id="password" placeholder="Password" required type="password" />
+                </c-col>
+              </c-row>
+              <hr />
+              <c-button-group>
+                <button [disabled]="submitted" cButton color="primary" type="submit" class="px-4">
+                  Submit
+                </button>
+              </c-button-group>
+            </form>
+          </c-card-body>
+        </c-card>
       </c-col>
     </c-row>
   </c-container>
 </div>
-
-
- 
