--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,56 +1,58 @@
 <div>
-  <h2 mat-dialog-title>{{data.actionType | transformCapitalizes}} stundet {{data.actionType !== 'create' ? '['+data.studentInfo.name+']' :''}}</h2>
- <div *ngIf="(data.actionType === 'edit' || data.actionType === 'create');else delete">
-  <mat-dialog-content style="display:flex;flex-direction: column;" [formGroup]="form">
-    <mat-form-field>
-      <mat-label>Name</mat-label>
-      <input matInput placeholder="Name" formControlName="name">
-    </mat-form-field>
-   <mat-form-field >
-    <mat-label>Gender</mat-label>
-      <mat-select [formControl]="genderControl" name="gender" placeholder="Gender">
-        <mat-option *ngFor="let gender of genderList" [value]="gender">
-          {{gender | transformGender}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-   <mat-form-field>
-    <mat-label>Age</mat-label>
-      <input matInput placeholder="Age" formControlName="age" type="number">
-    </mat-form-field>
-   <mat-form-field>
-    <mat-label>Area</mat-label>
-      <input matInput placeholder="Area" formControlName="area">
-    </mat-form-field>
-    <mat-form-field>
-    <mat-label>Province</mat-label>
-      <input matInput placeholder="province" formControlName="province">
-    </mat-form-field>
-    <mat-form-field>
-    <mat-label>City</mat-label>
-      <input matInput placeholder="City" formControlName="city">
-    </mat-form-field>
-    <mat-form-field>
-    <mat-label>Hope Salary</mat-label>
-      <input matInput placeholder="Hope Salary" formControlName="hope_salary" type="number">
-    </mat-form-field>
-    <mat-form-field>
-    <mat-label>Salary</mat-label>
-      <input matInput placeholder="Salary" formControlName="salary" type="number">
-    </mat-form-field>
-    <mat-form-field>
-    <mat-label>Group</mat-label>
-      <input matInput placeholder="Group" formControlName="group" type="number">
-    </mat-form-field>  
-  </mat-dialog-content>
-</div>
-<ng-template #delete>
-  <div *ngIf="data.actionType === 'delete';">
-    <mat-dialog-content>Are you sure to delete current student [{{ data.studentInfo.name }}]?</mat-dialog-content>
+  <h2 mat-dialog-title>{{data.actionType | transformCapitalizes}} stundet {{data.actionType !== 'create' ?
+    '['+data.studentInfo.name+']' :''}}</h2>
+  <div *ngIf="(data.actionType === 'edit' || data.actionType === 'create');else delete">
+    <mat-dialog-content style="display:flex;flex-direction: column;" [formGroup]="form">
+      <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Name" formControlName="name">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Gender</mat-label>
+        <mat-select [formControl]="genderControl" name="gender" placeholder="Gender">
+          <mat-option *ngFor="let gender of genderList" [value]="gender">
+            {{gender | transformGender}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Age</mat-label>
+        <input matInput placeholder="Age" formControlName="age" type="number">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Area</mat-label>
+        <input matInput placeholder="Area" formControlName="area">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Province</mat-label>
+        <input matInput placeholder="province" formControlName="province">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>City</mat-label>
+        <input matInput placeholder="City" formControlName="city">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Hope Salary</mat-label>
+        <input matInput placeholder="Hope Salary" formControlName="hope_salary" type="number">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Salary</mat-label>
+        <input matInput placeholder="Salary" formControlName="salary" type="number">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Group</mat-label>
+        <input matInput placeholder="Group" formControlName="group" type="number">
+      </mat-form-field>
+    </mat-dialog-content>
   </div>
-</ng-template>
+  <ng-template #delete>
+    <div *ngIf="data.actionType === 'delete';">
+      <mat-dialog-content>Are you sure to delete current student [{{ data.studentInfo.name }}]?</mat-dialog-content>
+    </div>
+  </ng-template>
   <mat-dialog-actions align="end">
     <button mat-button [mat-dialog-close]="false">Cancel</button>
-    <button mat-button [disabled]="submitted" [color]="data.actionType === 'delete'?'warn':'primary'" (click)="onSubmit()">{{data.actionType === 'delete'?'Delete':'Submit'}}</button>
+    <button mat-button [color]="data.actionType === 'delete'?'warn':'primary'" (click)="onSubmit()">{{data.actionType
+      === 'delete'?'Delete':'Submit'}}</button>
   </mat-dialog-actions>
 </div>
