--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,25 +1,16 @@
- 
-   <c-sidebar
-  #sidebar1="cSidebar"
-  class="d-print-none sidebar sidebar-fixed border-end"
-  colorScheme="dark"
-  id="sidebar1"
-  visible
->
+<c-sidebar #sidebar1="cSidebar" class="d-print-none sidebar sidebar-fixed border-end" colorScheme="dark" id="sidebar1"
+  visible>
   <c-sidebar-header class="border-bottom">
     <c-sidebar-brand>
-        Angular
+      Angular
     </c-sidebar-brand>
   </c-sidebar-header>
-    <c-sidebar-nav  [navItems]="routes" dropdownMode="close" />
-</c-sidebar> 
-  
-<!--main-->
+  <c-sidebar-nav [navItems]="routes" dropdownMode="close" />
+</c-sidebar>
+
 <div class="wrapper d-flex flex-column min-vh-100">
-  <app-default-header
-  class="mb-4 d-print-none header header-sticky p-0 shadow-sm"
-  position="sticky"
-  sidebarId="sidebar1"></app-default-header>
+  <app-default-header class="mb-4 d-print-none header header-sticky p-0 shadow-sm" position="sticky"
+    sidebarId="sidebar1"></app-default-header>
   <div class="body flex-grow-1">
     <c-container breakpoint="lg" class="h-auto px-4">
       <router-outlet />
